--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<thead>
+		<tr>
+			<th>
+				roll number
+			</th>
+			<th>name</th>
+		</tr>
+
+		<tr>
+			<td>45645</td>
+			<td>Aaditya</td>
+		</tr>
+
+		<tr>
+			<td>1842220001</td>
+			<td>Aaditya Kandu</td>
+		</tr>
+	</thead>
     <script type="text/javascript" src="./script.js">
 </script>
 
