--- a/main.html
+++ b/main.html
@@ -8,24 +8,27 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<thead>
-		<tr>
-			<th>
-				roll number
-			</th>
-			<th>name</th>
-		</tr>
 
-		<tr>
-			<td>45645</td>
-			<td>Aaditya</td>
-		</tr>
+	<table>
+		<thead>
+			<tr>
+				<th>roll number</th>
+				<th>name</th>
+			</tr>
+		</thead>
 
-		<tr>
-			<td>1842220001</td>
-			<td>Aaditya Kandu</td>
-		</tr>
-	</thead>
+		<tbody>
+			<tr>
+				<td>4545</td>
+				<td>fdgh</td>
+			</tr>
+			<tr>
+				<td>1842220001</td>
+				<td>Aaditya Kandu</td>
+			</tr>
+			
+		</tbody>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
